--- a/app/views/Users/show_user.html
+++ b/app/views/Users/show_user.html
@@ -7,7 +7,7 @@
     <!--<p>Create At : {{currentUser.createdAt}}</p>
     <p>Update At : {{currentUser.updatedAt}}</p>-->
 
-    <a class="btn btn-info" > Modifier </button></a>
+    <a href="#/manageUser/{{currentUser.id}}"  class="btn btn-info" > Modifier </button></a>
     <a href="#/users/"><button ng-click="deleteUser(currentUser.id)" class="btn btn-danger" > Supprimer </button></a>
     <a href="#/users/" class="btn btn-primary" > Retour </a>
 </div>
