--- a/app/views/Projects/list_project.html
+++ b/app/views/Projects/list_project.html
@@ -1,13 +1,13 @@
 <div>
-    <h3> Rechercher un projet</h3>
+    <h3> Projects search: </h3>
 
     <form class="navbar-form" novalidate>
-        <p> Nom du projet :  <input class="form-control" ng-model="project.title"  type="text">  </p>
+        <p>Search by name, description or year :  <input class="form-control" ng-model="project"  type="text">  </p>
     </form>
 
-    <h3>Liste des projets:</h3>
+    <h3>Projects list : <a href="#/manageProject/" class="btn btn-primary" > Add a project </a></h3>
 
     <ul class="nav nav-pills nav-stacked">
-        <li ng-repeat="project in projects | filter:project"> <a href="#/Project/{{project.id}}">{{project.title}} {{user.name}}</a> </li>
+        <li ng-repeat="project in projects | filter:project"> <a href="#/projects/{{project.id}}">{{project.title}} {{user.name}}</a> </li>
     </ul>
 </div>
