--- a/app/views/Projects/show_project.html
+++ b/app/views/Projects/show_project.html
@@ -1,10 +1,13 @@
-<!DOCTYPE html>
-<html>
-<head lang="en">
-    <meta charset="UTF-8">
-    <title></title>
-</head>
-<body>
+<div>
+    <h3> Projet {{currentProject.title}}:</h3>
+    <p>Description: {{currentProject.description}}</p>
+    <p>Start year: {{currentProject.year}}</p>
+    <!--<p>Create At: {{currentProject.createdAt}}</p>
+    <p>Update At: {{currentProject.updatedAt}}</p>-->
 
-</body>
-</html>
+    <h3> Users on the project: </h3>
+
+    <a href="#/manageProject/{{currentProject.id}}" class="btn btn-info" > Modifier </button></a>
+    <a href="#/projects/"><button ng-click="deleteProject(currentProject.id)" class="btn btn-danger" > Supprimer </button></a>
+    <a href="#/projects/" class="btn btn-primary" > Retour </a>
+</div>
