--- a/app/views/Users/list_user.html
+++ b/app/views/Users/list_user.html
@@ -1,11 +1,11 @@
 <div>
-  <h3> Rechercher un utilisateur</h3>
+  <h3> Users search </h3>
 
   <form class="navbar-form" novalidate>
-    <p> Nom de famille :  <input class="form-control" ng-model="user.name"  type="text">  </p>
+    <p>Search by name, surname, email or website :  <input class="form-control" ng-model="user"  type="text"></p>
   </form>
 
-  <h3>Liste des utilisateurs:</h3>
+  <h3>Users list : <a href="#/manageUser/" class="btn btn-primary" > Add an user </a> </h3>
 
   <ul class="nav nav-pills nav-stacked">
     <li ng-repeat="user in users | filter:user"> <a href="#/users/{{user.id}}">{{user.surname}} {{user.name}}</a> </li>
