--- a/app/views/Projects/list_project.html
+++ b/app/views/Projects/list_project.html
@@ -5,9 +5,11 @@
         <p>Search by name, description or year :  <input class="form-control" ng-model="project"  type="text">  </p>
     </form>
 
-    <h3>Projects list : <a href="#/manageProject/" class="btn btn-primary" > Add a project </a></h3>
+    <h3>Projects list : <a href="#/manageProject/" class="btn btn-success" > Add a project </a></h3>
 
     <ul class="nav nav-pills nav-stacked">
-        <li ng-repeat="project in projects | filter:project"> <a href="#/projects/{{project.id}}">{{project.title}} {{user.name}}</a> </li>
+        <li ng-repeat="project in projects | filter:project">
+            <a href="#/projects/{{project.id}}">{{project.title}}</a>
+        </li>
     </ul>
 </div>
