--- a/app/views/Roles/add_role.html
+++ b/app/views/Roles/add_role.html
@@ -6,6 +6,7 @@
         <p> User :  <select ng-options="user.id as user.surname + ' ' + user.name for user in users" ng-model="currentUser.id" class="form-control"  type="text"> </select></p>
         <p> Project :  <select ng-options="project.id as project.title for project in projects" ng-model="currentProject.id" class="form-control" type="text"> {{project.id}} </select></p>
 
-        <input value="Add role" class="btn btn-primary" ng-click="createRole(role, currentUser, currentProject)" type="submit">
+        <input value="Add role" class="btn btn-success" ng-click="createRole(role, currentUser, currentProject)" type="submit">
+        <btn ng-click="goBack()" class="btn btn-primary"> Go back </btn>
     </form>
 </div>
