--- a/app/views/Roles/update_role.html
+++ b/app/views/Roles/update_role.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
-<html>
-<head lang="en">
-    <meta charset="UTF-8">
-    <title></title>
-</head>
-<body>
+<h3> Change user's role in the project </h3>
 
-</body>
-</html>
+<div>
+    <form class="navbar-form" novalidate>
+        <p> New role name :  <input class="form-control" ng-model="currentRole.name" type="text"></p>
+
+        <input value="Update" class="btn btn-success" ng-click="updateRole(currentRole)" type="submit">
+        <btn ng-click="goBack()" class="btn btn-primary"> Go back </btn>
+    </form>
+</div>
