--- a/app/views/Users/list_user.html
+++ b/app/views/Users/list_user.html
@@ -5,7 +5,7 @@
     <p>Search by name, surname, email or website :  <input class="form-control" ng-model="user"  type="text"></p>
   </form>
 
-  <h3>Users list : <a href="#/manageUser/" class="btn btn-primary" > Add an user </a> </h3>
+  <h3>Users list : <a href="#/manageUser/" class="btn btn-success" > Add a user </a> </h3>
 
   <ul class="nav nav-pills nav-stacked">
     <li ng-repeat="user in users | filter:user"> <a href="#/users/{{user.id}}">{{user.surname}} {{user.name}}</a> </li>
