--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,23 +1,14 @@
 <div class="jumbotron">
-  <h1> Bienvenue, bonne visite ! </h1>
-  <p class="lead">
-    <img src="images/yeoman.png" alt="I'm Yeoman"><br>
-    Always a pleasure scaffolding your apps.
-  </p>
-  <p><a class="btn btn-lg btn-success" ng-href="#/">Splendid!<span class="glyphicon glyphicon-ok"></span></a></p>
+  <h2> Welcome to the Polytech' directory ! </h2>
+<div class="container">
+    <p>
+        <a class="btn btn-lg btn-success" ng-href="#/users">
+            <span class="glyphicon glyphicon-user"></span> Users list
+        </a>
+        <a class="btn btn-lg btn-success" ng-href="#/projects">
+            <span class="glyphicon glyphicon-list-alt"></span> Projects list </a>
+    </p>
 </div>
 
-<div class="row marketing">
-  <h4>HTML5 Boilerplate</h4>
-  <p>
-    HTML5 Boilerplate is a professional front-end template for building fast, robust, and adaptable web apps or sites.
-  </p>
 
-  <h4>Angular</h4>
-  <p>
-    AngularJS is a toolset for building the framework most suited to your application development.
-  </p>
-
-  <h4>Karma</h4>
-  <p>Spectacular Test Runner for JavaScript.</p>
 </div>
